--- a/requirements.txt
+++ b/requirements.txt
@@ -99,7 +99,7 @@ pyparsing==2.4.7
 PyQRCode==1.2.1
 pyrsistent==0.17.3
 python-dateutil==2.8.1
-python-snappy @ file:///D:/Transfer%C3%AAncias/python_snappy-0.5.4-cp37-cp37m-win_amd64.whl
+python-snappy == 0.5.4
 PyTrie==0.3.1
 pytz==2020.1
 pywin32==228
