--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ argon2-cffi==20.1.0
 asgiref==3.2.10
 astor==0.8.1
 astunparse==1.6.3
+async-generator==1.10
 attrs==20.2.0
 autobahn==20.7.1
 Automat==20.2.0
@@ -24,8 +25,10 @@ cryptography==3.1
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
+dj-database-url==0.5.0
 Django==3.1.1
 django-filter==2.3.0
+django-heroku==0.3.1
 djangorestframework==3.11.1
 djangorestframework-filters==1.0.0.dev0
 entrypoints==0.3
@@ -45,7 +48,7 @@ idna==2.10
 importlib-metadata==1.7.0
 incremental==17.5.0
 ipykernel==5.3.4
-ipython ==7.16.1
+ipython==7.16.1
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
 jedi==0.17.2
@@ -56,6 +59,7 @@ jupyter==1.0.0
 jupyter-client==6.1.7
 jupyter-console==6.2.0
 jupyter-core==4.6.3
+jupyterlab-pygments==0.1.1
 Keras==2.4.3
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
@@ -66,8 +70,10 @@ MarkupSafe==1.1.1
 matplotlib==3.3.2
 mistune==0.8.4
 msgpack==1.0.0
+nbclient==0.5.0
 nbconvert==6.0.3
 nbformat==5.0.7
+nest-asyncio==1.4.0
 netaddr==0.8.0
 networkx==2.5
 notebook==6.1.4
@@ -87,6 +93,7 @@ prometheus-client==0.8.0
 prompt-toolkit==3.0.7
 protobuf==3.13.0
 psutil==5.7.2
+psycopg2==2.8.6
 py-ubjson==0.16.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -99,8 +106,10 @@ pyparsing==2.4.7
 PyQRCode==1.2.1
 pyrsistent==0.17.3
 python-dateutil==2.8.1
+python-snappy @ file:///D:/Transfer%C3%AAncias/python_snappy-0.5.4-cp37-cp37m-win_amd64.whl
 PyTrie==0.3.1
 pytz==2020.1
+pywin32==228
 pywinpty==0.5.7
 PyYAML==5.3.1
 pyzmq==19.0.2
@@ -143,6 +152,7 @@ watchdog==0.10.3
 wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==1.0.1
+whitenoise==5.2.0
 widgetsnbextension==3.5.1
 wrapt==1.12.1
 zipp==3.1.0
