--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,9 @@ scikit-learn==0.23.2
 scipy==1.5.2
 Twisted==20.3.0
 django-heroku==0.3.1
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.3.0
+tensorflow-estimator==2.3.0
+tensorflow-gpu==2.3.0
+tensorflow-gpu-estimator==2.3.0
