--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ autobahn==20.7.1
 Django==3.1.1
 djangorestframework==3.11.1
 ipython==7.16.1
-Keras==2.4.3
 numpy==1.19.2
 pandas==1.1.2
 requests==2.24.0
@@ -10,10 +9,5 @@ scikit-fuzzy==0.4.2
 scikit-learn==0.23.2
 scipy==1.5.2
 Twisted==20.3.0
+gunicorn==20.0.4
 django-heroku==0.3.1
-tensorboard==2.3.0
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.0
-tensorflow-estimator==2.3.0
-tensorflow-gpu==2.3.0
-tensorflow-gpu-estimator==2.3.0
