--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,9 @@ jupyter-client==6.1.7
 jupyter-console==6.2.0
 jupyter-core==4.6.3
 jupyterlab-pygments==0.1.1
+Keras==2.4.3
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
 kiwisolver==1.2.0
 Markdown==3.2.2
 MarkupSafe==1.1.1
@@ -87,8 +90,11 @@ priority==1.3.0
 prometheus-client==0.8.0
 prompt-toolkit==3.0.7
 protobuf==3.13.0
+psycopg2-binary==2.8.6
 py-ubjson==0.16.1
+pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.20
 Pygments==2.7.1
 PyHamcrest==2.0.2
 PyNaCl==1.4.0
@@ -100,6 +106,7 @@ python-dateutil==2.8.1
 PyTrie==0.3.1
 pytz==2020.1
 pywinpty==0.5.7
+PyYAML==5.3.1
 pyzmq==19.0.2
 qtconsole==4.7.7
 QtPy==1.9.0
@@ -112,6 +119,7 @@ scipy==1.5.2
 sdnotify==0.3.2
 Send2Trash==1.5.0
 service-identity==18.1.0
+six==1.15.0
 sortedcontainers==2.2.2
 sqlparse==0.3.1
 termcolor==1.1.0
