--- a/.crossbar/config.json
+++ b/.crossbar/config.json
@@ -37,7 +37,7 @@
           "type": "web",
           "endpoint": {
             "type": "tcp",
-            "port": 8080
+            "port": "$PORT"
           },
           "paths": {
             "/": {
