added crossbar websocket

--- a/.crossbar/config.json
+++ b/.crossbar/config.json
@@ -32,6 +32,13 @@
         }
       ],
       "transports": [
+         {
+                "type": "websocket",
+                "endpoint": {
+                   "type": "tcp",
+                   "port": 9000
+                }
+             },
         {
           "type": "web",
           "endpoint": {
