--- a/.crossbar/config.json
+++ b/.crossbar/config.json
@@ -32,19 +32,13 @@
         }
       ],
       "transports": [
-        {
-          "type": "web",
-          "endpoint": {
-            "type": "tcp",
-            "port": 8080
-          },
-          "paths": {
-            "/": {
-              "type": "static",
-              "directory": "../web"
-            }
-          }
-        },
+         {
+                "type": "websocket",
+                "endpoint": {
+                   "type": "tcp",
+                   "port": 9000
+                }
+             },
         {
           "type": "web",
           "endpoint": {
