--- a/.crossbar/config.json
+++ b/.crossbar/config.json
@@ -28,22 +28,6 @@
       ],
       "transports": [
         {
-          "type": "rawsocket",
-          "endpoint": {
-            "type": "tcp",
-            "port": 8081,
-            "backlog": 1024
-          },
-          "options": {
-            "max_message_size": 1048576
-          },
-          "serializers": [
-            "cbor",
-            "msgpack",
-            "json"
-          ]
-        },
-        {
           "type": "web",
           "endpoint": {
             "type": "tcp",
@@ -51,8 +35,9 @@
           },
           "paths": {
             "/": {
-              "type": "static",
-              "directory": ".."
+              "type": "wsgi",
+            "module": "apache.wsgi",
+            "object": "application"
             },
             "notify": {
               "type": "publisher",
