--- a/.crossbar/config.json
+++ b/.crossbar/config.json
@@ -36,7 +36,7 @@
           "paths": {
             "/": {
               "type": "wsgi",
-            "module": "apache.wsgi",
+            "module": "Server.wsgi",
             "object": "application"
             },
             "notify": {
