- Limited Threads to 1. A bit drastic, but let's see if it fixes the memory issues!

--- a/.crossbar/config.json
+++ b/.crossbar/config.json
@@ -1,7 +1,6 @@
 {
   "version": 2,
-  "controller": {
-  },
+  "controller": {},
   "workers": [
     {
       "type": "router",
@@ -37,7 +36,8 @@
             "/": {
               "type": "wsgi",
               "module": "Server.wsgi",
-              "object": "application"
+              "object": "application",
+              "maxthreads": 1
             },
             "notify": {
               "type": "publisher",
