--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.1.1
 djangorestframework==3.12.2
 django-on-heroku==1.1.2
 ipython==7.19.0
+joblib??
 msgpack==1.0.0
 matplotlib==3.3.3
 numpy==1.19.2
