--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ crossbar==20.8.1
 Django==3.1.1
 djangorestframework==3.12.2
 django-on-heroku==1.1.2
+gunicorn==20.0.4
 ipython==7.19.0
-joblib??
+joblib==0.17.0
 msgpack==1.0.0
 matplotlib==3.3.3
 numpy==1.19.2
