Just testing out

--- a/heroku.yml
+++ b/heroku.yml
@@ -1,8 +1,2 @@
-# setup:
-#   addons:
-#     - plan: heroku-postgresql
-# build:
-#   docker:
-#     web: Dockerfile
 run:
-  web: crossbar start; gunicorn Server.wsgi --bind 0.0.0.0:3100 --preload --worker-class=gthread --workers=2 --threads=2 --max-requests=250 --max-requests-jitter=50
+  web: crossbar start
